[package]
name = "get-media-twitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = "0.10"
envfile = "0.2.1"
urlencoding = "2.1.0"
base64 = "0.13.0"
tokio = { version = "0.2.22", features = ["full"]}
regex = "1.5.4"
